# cba-analysis

./: .gitignore  README.md  count.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
clause_extraction/extraction/: runner.py
clause_extraction/ocr/: runner.py
development/generosity/: compare_scores.py  run_gabriel.py
development/scripts/: extract_cba_features.py
experiments/clause_extraction/: analyze_results.py  report.md  results.csv  run_experiment.py
experiments/ocr/: CLAUDE.md  results.csv  run_experiment.py
experiments/segmentation/: CLAUDE.md  analyze_results.py  results.csv
experiments/sentence_parse/: results.csv
generosity/: health_generosity_results.csv  healthcare_generosity_scores.csv
generosity/test_text_health/: CBA_01.txt  CBA_02.txt  CBA_03.txt  CBA_04.txt  CBA_05.txt  CBA_06.txt  CBA_07.txt  CBA_08.txt  CBA_09.txt  CBA_10.txt  CBA_11.txt  CBA_12.txt  CBA_13.txt  CBA_14.txt  CBA_15.txt  CBA_16.txt  CBA_17.txt  CBA_18.txt  CBA_19.txt  CBA_20.txt
ocr_output/document_1/: dolma.jsonl  full.txt  page_0001.txt  page_0002.txt  page_0004.txt  page_0005.txt  page_0006.txt  page_0007.txt  page_0008.txt  page_0009.txt  page_0010.txt  page_0011.txt  page_0012.txt  (+192 more)
outputs/: cba_features.csv  cba_features_annotated.jsonl  extraction_processing_cache.json  ocr_processing_cache.json  processing_cache.json  review.csv
processed_cbas/: CBAList_fixed.dta  CBAList_with_statefips.dta
references/: feature_taxonomy_final.md
review_ui/: README.md  app.py  app2.py  app3.py  spacy.py
scripts/: extract_cba_features.py
(+1417 files in other folders)
