[project]
name = "cba-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langextract[openai]>=1.1.1",
    "olmocr[bench]>=0.4.25",
    "pypdf>=6.7.0",
    "streamlit[pdf]>=1.54.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
